# resources/lang/en/models/events.php
@@ -1,0 +1,20 @@
+<?php
+
+return array (
+  'singular' => 'Event',
+  'plural' => 'Events',
+  'fields' => 
+  array (
+    'id' => 'Id',
+    'title' => 'Title',
+    'description' => 'Description',
+    'image' => 'Image',
+    'date_from' => 'Date From',
+    'date_to' => 'Date To',
+    'user_id' => 'User Id',
+    'mosque_id' => 'Mosque Id',
+    'created_at' => 'Created At',
+    'updated_at' => 'Updated At',
+    'deleted_at' => 'Deleted At',
+  ),
+);
