# routes/api.php
@@ -17,14 +17,16 @@ use Illuminate\Http\Request;
 //     return $request->user();
 // });
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-});
+// Route::get('/user', function (Request $request) {
+//     return $request->user();
+// });
 
 Route::group(['prefix' => 'v1'], function () {
     Route::resource('mosques', 'MosqueAPIController');
     Route::resource('blog_posts', 'BlogPostAPIController');
     Route::resource('blogPosts', 'BlogPostAPIController');
+    Route::resource('events', 'EventAPIController');
+    
     Route::group(['middleware' => 'api','prefix' => 'auth'], function ($router) {
         Route::post('login', 'AuthController@login');
         Route::post('logout', 'AuthController@logout');
@@ -36,6 +38,7 @@ Route::group(['prefix' => 'v1'], function () {
 Route::resource('mosques', 'MosqueAPIController');
 Route::resource('blog_posts', 'BlogPostAPIController');
 Route::resource('blogPosts', 'BlogPostAPIController');
+Route::resource('events', 'EventAPIController');
 
 Route::group(['middleware' => 'api','prefix' => 'auth'], function ($router) {
     Route::post('login', 'AuthController@login');
